--- a/src/station1.html
+++ b/src/station1.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <div>
-      <img
-        src="html-stations/src/assets/image/railway-thumbnail.png"
-        alt="タイトルの画像"
-      />
+      <img src="./assets/image/railway-thumbnail.png" alt="タイトルの画像" />
       <p>TechTrainの使い方</p>
       <p>TechBowl</p>
       <p>Suguru Ohki</p>
