1-8を変更 カードを3つから6つへ

--- a/src/station8.html
+++ b/src/station8.html
@@ -52,6 +52,36 @@
         <p class="card__description">Joseph Solomon</p>
         <p class="card__description">420 mil visualizações • há 1 ano</p>
       </div>
+      <div class="card">
+        <img
+          src="./assets/image/railway-thumbnail.png"
+          class="card__img-top"
+          alt="タイトル画像"
+        />
+        <p class="card__title">タイトル4</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+      <div class="card">
+        <img
+          src="./assets/image/railway-thumbnail.png"
+          class="card__img-top"
+          alt="タイトル画像"
+        />
+        <p class="card__title">タイトル5</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+      <div class="card">
+        <img
+          src="./assets/image/railway-thumbnail.png"
+          class="card__img-top"
+          alt="タイトル画像"
+        />
+        <p class="card__title">タイトル6</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
     </main>
     <footer></footer>
   </body>
